agdev04.actix-web-diesel-jwt.42508e690746d3395b9ba5f342f62a160ca93899
Running as unit: run-p1429185-i14009293.scope; invocation ID: f8e909a6af924053900488cd9a90543e
warning: actix-web-diesel-jwt v0.1.0 (/tmp/nix-shell.uUVugk/agdev04_actix-web-diesel-jwt_40jyirtg) ignoring invalid dependency `cargo-watch` which is missing a lib target
   Compiling proc-macro2 v1.0.86
   Compiling unicode-ident v1.0.13
    Checking cfg-if v1.0.0
   Compiling libc v0.2.159
   Compiling autocfg v1.3.0
   Compiling version_check v0.9.5
    Checking pin-project-lite v0.2.14
    Checking bytes v1.7.2
    Checking memchr v2.7.4
    Checking itoa v1.0.11
    Checking log v0.4.22
    Checking futures-core v0.3.30
   Compiling lock_api v0.4.12
   Compiling parking_lot_core v0.9.10
    Checking once_cell v1.20.1
    Checking futures-sink v0.3.30
    Checking scopeguard v1.2.0
    Checking smallvec v1.13.2
   Compiling slab v0.4.9
   Compiling quote v1.0.37
   Compiling typenum v1.17.0
   Compiling syn v2.0.77
    Checking futures-channel v0.3.30
   Compiling generic-array v0.14.7
    Checking pin-utils v0.1.0
    Checking subtle v2.6.1
    Checking futures-io v0.3.30
    Checking fnv v1.0.7
    Checking futures-task v0.3.30
   Compiling shlex v1.3.0
    Checking byteorder v1.5.0
    Checking getrandom v0.2.15
    Checking socket2 v0.5.7
    Checking signal-hook-registry v1.4.2
    Checking mio v1.0.2
    Checking parking_lot v0.12.3
   Compiling jobserver v0.1.32
    Checking http v0.2.12
   Compiling serde v1.0.210
   Compiling num-conv v0.1.0
   Compiling cc v1.1.21
    Checking powerfmt v0.2.0
   Compiling time-core v0.1.2
   Compiling time-macros v0.2.18
    Checking deranged v0.3.11
    Checking rand_core v0.6.4
    Checking tracing-core v0.1.32
   Compiling num-traits v0.2.19
    Checking crypto-common v0.1.6
    Checking block-buffer v0.10.4
   Compiling ahash v0.8.11
    Checking digest v0.10.7
    Checking ryu v1.0.18
    Checking zeroize v1.8.1
    Checking allocator-api2 v0.2.18
    Checking http-body v0.4.6
    Checking time v0.3.36
    Checking http v1.1.0
    Checking equivalent v1.0.1
    Checking percent-encoding v2.3.1
    Checking either v1.13.0
    Checking vsimd v0.8.0
    Checking outref v0.5.1
    Checking bytes-utils v0.1.4
    Checking num-integer v0.1.46
   Compiling ring v0.17.8
    Checking crc32fast v1.4.2
    Checking base64-simd v0.8.0
    Checking http-body v1.0.1
    Checking cpufeatures v0.2.14
   Compiling semver v1.0.23
    Checking untrusted v0.9.0
   Compiling httparse v1.9.4
    Checking spin v0.9.8
    Checking base64ct v1.6.0
    Checking const-oid v0.9.6
   Compiling rustc_version v0.4.1
    Checking der v0.6.1
    Checking httpdate v1.0.3
    Checking form_urlencoded v1.2.1
    Checking crypto-bigint v0.4.9
    Checking ff v0.12.1
    Checking base64 v0.21.7
    Checking base16ct v0.1.1
   Compiling rustls v0.21.12
    Checking group v0.12.1
    Checking hmac v0.12.1
   Compiling pkg-config v0.3.31
    Checking try-lock v0.2.5
    Checking want v0.3.1
    Checking spki v0.6.0
    Checking rustls-pemfile v1.0.4
    Checking pkcs8 v0.9.0
    Checking sha2 v0.10.8
    Checking sec1 v0.3.0
    Checking rfc6979 v0.3.1
    Checking signature v1.6.4
    Checking elliptic-curve v0.12.3
    Checking openssl-probe v0.1.5
   Compiling ident_case v1.0.1
    Checking fastrand v2.1.1
    Checking regex-lite v0.1.6
   Compiling zstd-sys v2.0.13+zstd.1.5.6
   Compiling strsim v0.11.1
    Checking tinyvec_macros v0.1.1
    Checking tower-service v0.3.3
    Checking bitflags v2.6.0
    Checking tinyvec v1.8.0
    Checking ecdsa v0.14.8
    Checking rustls-native-certs v0.6.3
   Compiling darling_core v0.20.10
   Compiling aws-types v1.3.3
    Checking aho-corasick v1.1.3
   Compiling paste v1.0.15
    Checking hex v0.4.3
    Checking regex-syntax v0.8.4
    Checking unicode-normalization v0.1.24
   Compiling tokio-macros v2.4.0
   Compiling futures-macro v0.3.30
    Checking tokio v1.40.0
   Compiling zerocopy-derive v0.7.35
    Checking futures-util v0.3.30
   Compiling serde_derive v1.0.210
    Checking zerocopy v0.7.35
   Compiling tracing-attributes v0.1.27
    Checking hashbrown v0.14.5
    Checking indexmap v2.5.0
    Checking tracing v0.1.40
    Checking http-body-util v0.1.2
   Compiling darling_macro v0.20.10
    Checking regex-automata v0.4.7
    Checking p256 v0.11.1
    Checking crypto-bigint v0.5.5
    Checking sct v0.7.1
    Checking rustls-webpki v0.101.7
    Checking tokio-util v0.7.12
    Checking aws-smithy-async v1.2.1
    Checking aws-smithy-types v1.2.7
    Checking h2 v0.3.26
    Checking aws-smithy-runtime-api v1.7.2
    Checking aws-smithy-eventstream v0.60.5
    Checking tokio-rustls v0.24.1
    Checking aws-smithy-http v0.60.11
    Checking aws-credential-types v1.2.1
    Checking local-waker v0.1.4
   Compiling zstd-safe v7.2.1
    Checking unicode-bidi v0.3.15
    Checking alloc-no-stdlib v2.0.4
    Checking aws-sigv4 v1.2.4
    Checking alloc-stdlib v0.2.2
    Checking idna v0.5.0
    Checking regex v1.10.6
   Compiling darling v0.20.10
    Checking ppv-lite86 v0.2.20
    Checking sha1 v0.10.6
    Checking base64 v0.22.1
   Compiling serde_json v1.0.128
    Checking adler2 v2.0.0
    Checking uuid v1.10.0
    Checking miniz_oxide v0.8.0
   Compiling bytestring v1.3.1
    Checking hyper v0.14.30
    Checking actix-service v2.0.2
    Checking rand_chacha v0.3.1
    Checking url v2.5.2
   Compiling toml_datetime v0.6.8
   Compiling serde_spanned v0.6.8
    Checking brotli-decompressor v4.0.1
    Checking actix-utils v3.0.1
    Checking aws-smithy-json v0.60.7
    Checking actix-rt v2.10.0
   Compiling cookie v0.16.2
   Compiling winnow v0.6.20
   Compiling convert_case v0.4.0
   Compiling derive_more v0.99.18
    Checking brotli v6.0.0
   Compiling actix-router v0.5.3
    Checking rand v0.8.5
    Checking flate2 v1.0.34
   Compiling toml_edit v0.22.22
    Checking hyper-rustls v0.24.2
    Checking local-channel v0.1.5
    Checking actix-codec v0.5.2
    Checking aws-smithy-runtime v1.7.1
   Compiling crc32c v0.6.8
    Checking encoding_rs v0.8.34
    Checking language-tags v0.3.2
   Compiling thiserror v1.0.64
   Compiling pq-sys v0.6.3
   Compiling rustix v0.38.37
   Compiling heck v0.5.0
    Checking mime v0.3.17
    Checking xmlparser v0.13.6
   Compiling dsl_auto_type v0.1.2
    Checking aws-smithy-xml v0.60.9
   Compiling toml v0.8.19
   Compiling actix-web-codegen v4.3.0
    Checking actix-server v2.5.0
    Checking aws-runtime v1.4.3
    Checking serde_urlencoded v0.7.1
   Compiling actix-macros v0.2.4
   Compiling thiserror-impl v1.0.64
   Compiling diesel_table_macro_syntax v0.2.0
    Checking urlencoding v2.1.3
    Checking utf8parse v0.2.2
    Checking impl-more v0.1.6
    Checking linux-raw-sys v0.4.14
    Checking aws-smithy-query v0.60.7
    Checking anstyle-parse v0.2.5
   Compiling diesel_derives v2.2.3
   Compiling migrations_internals v2.2.0
    Checking zstd v0.13.2
    Checking actix-http v3.9.0
    Checking num-bigint v0.4.6
    Checking md-5 v0.10.6
    Checking anstyle-query v1.1.1
    Checking anstyle v1.0.8
   Compiling parse-size v1.1.0
    Checking colorchoice v1.0.2
    Checking is_terminal_polyfill v1.70.1
    Checking anstream v0.6.15
   Compiling actix-multipart-derive v0.7.0
    Checking simple_asn1 v0.6.2
    Checking aws-smithy-checksums v0.60.12
   Compiling migrations_macros v2.2.0
    Checking aws-sdk-ssooidc v1.45.0
    Checking aws-sdk-sso v1.44.0
    Checking aws-sdk-sts v1.44.0
    Checking actix-web v4.9.0
    Checking pem v3.0.4
    Checking env_filter v0.1.2
    Checking serde_plain v1.0.2
    Checking futures-executor v0.3.30
    Checking lru v0.12.4
    Checking password-hash v0.5.0
    Checking blake2 v0.10.6
    Checking iana-time-zone v0.1.61
    Checking humantime v2.1.0
    Checking chrono v0.4.38
    Checking tempfile v3.12.0
    Checking env_logger v0.11.5
    Checking argon2 v0.5.3
    Checking aws-sdk-s3 v1.53.0
    Checking aws-config v1.5.7
    Checking futures v0.3.30
    Checking jsonwebtoken v9.3.0
    Checking dotenv v0.15.0
    Checking diesel v2.2.4
    Checking actix-multipart v0.7.2
    Checking actix-cors v0.7.0
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.2.4/src/query_builder/ast_pass.rs:220:51
    |
220 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
